--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,11 +7,20 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-16.04'
 
 variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
+  inputs:
+    version: '3.0.x'
+
+- task: UseDotNet@2
+  inputs:
+    version: '2.2.x'
+    packageType: runtime
+    
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
